# file-scanner-mcp

./: .coverage  .gitattributes  .gitignore  BACKLOG.md  CONTRIBUTING.md  MILESTONE_1_COMPLETE.md  MILESTONE_2_COMPLETE.md  README.md  pyproject.toml  smithery.yaml  test_code_map.py
.github/workflows/: publish.yml  test.yml
experiments/benchmark/: M2B.md  M2B_preregistered.md  M2B_preregistrert.md  M2C.md  M2C_preregistered.md  M2C_preregistrert.md  README.md  harness.py  m2b_tasks.json  m2c_tasks.json  prepare_swebench.py
experiments/condensation/: README.md  condense_experiment.py  generic_condense_experiment.py
experiments/entropy_metrics/: README.md  capture_selection.py  compression_experiment.py  dedup_experiment.py  node_direct_experiment.py  selection_after.json  selection_before.json  selection_compare.md  selection_node_direct.json  skeleton_depth_experiment.py
experiments/size_gate/: README.md
experiments/trailing_comments/: README.md
src/scantool/: __init__.py  call_graph.py  code_health.py  code_map.py  connectivity.py  consensus.py  content_search.py  delta.py  directory_formatter.py  focus.py  formatter.py  git_signals.py  preview.py  ref_diff.py  reference_map.py  scanner.py  server.py
tests/: test_all.py  test_code_health.py  test_code_map_cache.py  test_connectivity.py  test_consensus.py  test_content_search.py  test_dead_reachability.py  test_delta.py  test_entropy.py  test_git_signals.py  test_glimpse.py  test_golden.py  test_integration.py  test_ref_diff.py  test_reference_map.py
tests/analyzers/: test_php_analyzer.py
(+90 files in other folders)
